--- a/index.html
+++ b/index.html
@@ -1,87 +1,48 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <title>PyChuckie - Jeu éducatif Python</title>
-  <script src="https://cdn.jsdelivr.net/pyodide/v0.18.1/full/pyodide.js"></script>
-  <style>
-    body {
-      background: #111;
-      color: #eee;
-      font-family: monospace;
-      padding: 2em;
-    }
-    h1 {
-      color: #fff;
-      font-size: 2.5em;
-    }
-    button {
-      padding: 1em;
-      background-color: gold;
-      border: none;
-      font-size: 1.2em;
-      cursor: pointer;
-      margin-top: 1em;
-    }
-    #loading {
-      margin-top: 2em;
-      background-color: #222;
-      color: #fff;
-      padding: 1em;
-      font-size: 1.2em;
-      display: none;
-    }
-  </style>
+  <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Bienvenue dans <code>PyChuckie</code> 🐣</h1>
   <p>Clique sur le bouton ci-dessous pour lancer le moteur de code éducatif Python :</p>
-  <button onclick="launchPyodide()">Lancer le jeu</button>
-  <div id="loading">Chargement de Pyodide...</div>
 
-  <script>
-    async function launchPyodide() {
-      document.getElementById('loading').style.display = 'block';
-      let pyodide = await loadPyodide({
-        indexURL: "https://cdn.jsdelivr.net/pyodide/v0.18.1/full/"
-      });
+  <label for="levelSelect">Choisir un niveau :</label>
+  <select id="levelSelect">
+    <option value="1">Niveau 1</option>
+<option value="2">Niveau 2</option>
+<option value="3">Niveau 3</option>
+<option value="4">Niveau 4</option>
+<option value="5">Niveau 5</option>
+<option value="6">Niveau 6</option>
+<option value="7">Niveau 7</option>
+<option value="8">Niveau 8</option>
+<option value="9">Niveau 9</option>
+<option value="10">Niveau 10</option>
+<option value="11">Niveau 11</option>
+<option value="12">Niveau 12</option>
+<option value="13">Niveau 13</option>
+<option value="14">Niveau 14</option>
+<option value="15">Niveau 15</option>
+<option value="16">Niveau 16</option>
+<option value="17">Niveau 17</option>
+<option value="18">Niveau 18</option>
+<option value="19">Niveau 19</option>
+<option value="20">Niveau 20</option>
+<option value="21">Niveau 21</option>
+<option value="22">Niveau 22</option>
+<option value="23">Niveau 23</option>
+<option value="24">Niveau 24</option>
+<option value="25">Niveau 25</option>
+  </select>
 
-      await pyodide.loadPackage('pygame');
+  <button id="launchBtn">Lancer le jeu</button>
+  <div id="status">Chargement de Pyodide...</div>
+  <canvas id="pygame-canvas"></canvas>
 
-      let code = `
-import asyncio
-import pygame
-import platform
-
-FPS = 60
-
-def setup():
-    pygame.init()
-    pygame.display.set_mode((400, 300))
-    pygame.display.set_caption("Exemple Pygame")
-
-def update_loop():
-    for event in pygame.event.get():
-        if event.type == pygame.QUIT:
-            pygame.quit()
-            return
-    pygame.display.flip()
-
-async def main():
-    setup()
-    while True:
-        update_loop()
-        await asyncio.sleep(1.0 / FPS)
-
-if platform.system() == "Emscripten":
-    asyncio.ensure_future(main())
-else:
-    asyncio.run(main())
-`;
-
-      pyodide.runPython(code);
-    }
-  </script>
+  <script src="main.js"></script>
 </body>
 </html>
